2012-02-13 Riccardo Mottola <rm@gnu.org>

	* TarArchive.m:
	Fix date parsing in BSD-tar archives, sanity checks.

	* ZipArchive.m:
	Fix date parsing and some sanity checks.

2012-02-13 Riccardo Mottola <rm@gnu.org>

	* TarArchive.m:
	Fix date parsing in gnu-tar archives, sanity checks.

2012-02-13 Riccardo Mottola <rm@gnu.org> for Sebastian Reitenbach

	* Resources/MainMenu-GNUstep.gsmarkup
	Fix menu equivalents.

	* PreferencesController.m
	Remember 7zip executable


2012-02-13 Riccardo Mottola <rm@gnu.org>

	Initial GAP check-in
	License changed to GPLv2 in accordance with the original author
	Packed resources into Resources subdirectory