@@ -1,17 +1,7 @@
-#include <Foundation/Foundation.h>
-#include <AppKit/AppKit.h>
-#include <Renaissance/Renaissance.h>
-#include "AppDelegate.h"
+#import <Foundation/Foundation.h>
+#import <AppKit/AppKit.h>
 
 int main(int argc, const char *argv[]) 
 {
-	CREATE_AUTORELEASE_POOL (pool);
-	  
-	[NSApplication sharedApplication];
- 	[NSApp setDelegate: [AppDelegate new]];
-  
-	[NSBundle loadGSMarkupNamed: @"MainMenu-GNUstep"  owner: [NSApp delegate]];
-
-	RELEASE (pool);
-	return NSApplicationMain(argc, argv);
+  return NSApplicationMain(argc, argv);
 }
